# CacheCow

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  cachecow.spec  cleaner.py  docker-compose.yml  downloader.py  install.sh  letterboxd_to_radarr.py  loop_cleaner.py  loop_downloader.py  requirements.txt  run.py  setup.sh  supervisord.conf  utils.py  youtube-api.md  youtubedl2.py  youtubedl_clean.py
.github/workflows/: release.yml  test.yml
app/: auth.py  celery_app.py  config.py  database.py  executor.py  logging_config.py  main.py  models.py  paths.py  scheduler.py  state.py  templating.py
app/routers/: auth.py  channels.py  discover.py  downloads.py  history.py  home.py  logs.py  queue.py  settings.py  tags.py
app/services/: cleaner.py  downloader.py
app/static/css/: style.css
app/tasks/: cleanup.py  download.py  update_ytdlp.py
app/templates/: _macros.html  base.html  login.html  setup.html
app/templates/channels/: _card.html  _form.html  _live_status.html  _search_results.html  add.html  edit.html  index.html
app/templates/discover/: _overwrite_confirm.html  _results.html  index.html
app/templates/history/: index.html
app/templates/home/: _video_grid.html  index.html  video.html
app/templates/logs/: index.html
migrations/: migrate_json.py
scripts/: auto_deploy.sh  build-macos.sh  inspect_youtool.py  mobile_nav_open.py  use_youtool_avatar.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+6 files in other folders)
